Bug 925303 - Border of the back button in the Customize mode is too dark when in customization mode. r=dao

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -620,7 +620,7 @@ menuitem.bookmark-item {
   transition: none;
 }
 
-#back-button[disabled] > .toolbarbutton-icon {
+#main-window:not([customizing]) #back-button[disabled] > .toolbarbutton-icon {
   box-shadow: 0 0 0 1px hsla(210,54%,20%,.55),
               0 1px 0 hsla(210,54%,20%,.65) !important;
   transition: none;
